# ssh-agent

./: ARCHITECTURE.md  README.md  config.py  dockerfile  graph.py  main.py  pyproject.toml  quick_test.py  test.ipynb  test_connector.py  test_critic.py  test_graph.py  test_groq.py  test_main.py  test_ws_client.py
agents/: criticagent.py  shellagent.py
api/: __init__.py  agents.py
brain/: llm.py
connectors/: __init__.py  chroma_connector.py  mongo_connection.py  redis_connector.py  session_manager.py  ssh.py  ssh_connector.py
schemas/: __init__.py  command.py  server.py  session.py  user.py
services/: confirmtion_store.py  rag_service.py
tools/: all_tools.py  file_tools.py  network_tool.py  os_tools.py  process_tool.py  shelltool.py
utils/: formatter.py
