[project]
name = "ssh-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "chromadb>=1.5.8",
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "motor>=3.7.1",
    "paramiko>=4.0.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]
